Bug 66142 - [PATCH] Typo in cmake: DBUS_DISABLE_ASSERTS should be DBUS_DISABLE_ASSERT
Summary: [PATCH] Typo in cmake: DBUS_DISABLE_ASSERTS should be DBUS_DISABLE_ASSERT
Status: RESOLVED FIXED
Alias: None
Product: dbus
Classification: Unclassified
Component: core (show other bugs)
Version: 1.5
Hardware: Other All
: medium normal
Assignee: Havoc Pennington
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-25 05:33 UTC by Chengwei Yang
Modified: 2013-11-06 11:05 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
[PATCH] Fix a typo for cmake: DBUS_DISABLE_ASSERTS should be DBUS_DISABLE_ASSERT (4.87 KB, patch)
2013-06-25 05:35 UTC, Chengwei Yang
Details | Splinter Review
[PATCH 1/2] cmake: fix a typo DBUS_DISABLE_ASSERTS should be DBUS_DISABLE_ASSERT (4.87 KB, patch)
2013-06-25 05:48 UTC, Chengwei Yang
Details | Splinter Review
[PATCH 2/2] cmake: remove a duplicate line and fix coding style (1.16 KB, patch)
2013-06-25 05:48 UTC, Chengwei Yang
Details | Splinter Review
[PATCH v2 1/4] cmake: fix a typo DBUS_DISABLE_ASSERTS should be DBUS_DISABLE_ASSERT (4.87 KB, patch)
2013-06-25 07:44 UTC, Chengwei Yang
Details | Splinter Review
[PATCH v2 2/4] cmake: remove a duplicate line and fix coding style (1.16 KB, patch)
2013-06-25 07:45 UTC, Chengwei Yang
Details | Splinter Review

Description Chengwei Yang 2013-06-25 05:33:22 UTC
As the summary suggests, there is a typo in cmake build files. DBUS_DISABLE_ASSERTS should be DBUS_DISABLE_ASSERT.
Comment 1 Chengwei Yang 2013-06-25 05:35:19 UTC
Created attachment 81383 [details] [review]
[PATCH] Fix a typo for cmake: DBUS_DISABLE_ASSERTS should be  DBUS_DISABLE_ASSERT
Comment 2 Chengwei Yang 2013-06-25 05:48:25 UTC
Created attachment 81384 [details] [review]
[PATCH 1/2] cmake: fix a typo DBUS_DISABLE_ASSERTS should be  DBUS_DISABLE_ASSERT
Comment 3 Chengwei Yang 2013-06-25 05:48:54 UTC
Created attachment 81385 [details] [review]
[PATCH 2/2] cmake: remove a duplicate line and fix coding style
Comment 4 Chengwei Yang 2013-06-25 07:44:20 UTC
Created attachment 81390 [details] [review]
[PATCH v2 1/4] cmake: fix a typo DBUS_DISABLE_ASSERTS should be  DBUS_DISABLE_ASSERT
Comment 5 Chengwei Yang 2013-06-25 07:45:28 UTC
Created attachment 81391 [details] [review]
[PATCH v2 2/4] cmake: remove a duplicate line and fix coding style
Comment 6 Chengwei Yang 2013-06-25 07:47:35 UTC
Hi Simon, I build patches for #bug 65990 based on these changes, so you can find 3/4, 4/4 there. A little ugly but just want to help you to do merge without any conflict.
Comment 7 Simon McVittie 2013-06-25 11:13:36 UTC
Comment on attachment 81390 [details] [review]
[PATCH v2 1/4] cmake: fix a typo DBUS_DISABLE_ASSERTS should be  DBUS_DISABLE_ASSERT

Review of attachment 81390 [details] [review]:
-----------------------------------------------------------------

Looks good.
Comment 8 Simon McVittie 2013-06-25 11:13:54 UTC
Comment on attachment 81391 [details] [review]
[PATCH v2 2/4] cmake: remove a duplicate line and fix coding style

Review of attachment 81391 [details] [review]:
-----------------------------------------------------------------

Sure.
Comment 9 Simon McVittie 2013-06-25 11:23:09 UTC
Fixed in git for 1.7.6, thanks
Comment 10 Cristian Oneț 2013-11-06 11:05:11 UTC
Could this fix be merged to the 1.6.x branch?


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.