cmake: fix a typo DBUS_DISABLE_ASSERTS should be DBUS_DISABLE_ASSERT

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=66142
Signed-off-by: Chengwei Yang <chengwei.yang@intel.com>
Reviewed-by: Simon McVittie <simon.mcvittie@collabora.co.uk>