cmake/config.h.cmake
@@ -42,7 +42,7 @@
 #cmakedefine DBUS_BUILD_TESTS 1
 #cmakedefine DBUS_ENABLE_ANSI 1
 #cmakedefine DBUS_ENABLE_VERBOSE_MODE 1
-#cmakedefine DBUS_DISABLE_ASSERTS 1
+#cmakedefine DBUS_DISABLE_ASSERT 1
 #cmakedefine DBUS_DISABLE_CHECKS 1
 /* xmldocs */
 /* doxygen */
